# OzeSome.Data/Models/Dtos/StatusDto.cs
@@ -1,0 +1,8 @@
+﻿namespace OzeSome.Data.Models.Dtos
+{
+    public class StatusDto
+    {
+        public int Id { get; set; }
+        public string StatusName { get; set; } = string.Empty;
+    }
+}
